--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>Omsai</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png?v=3">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon.png?v=3">
+<link rel="apple-touch-icon" href="/favicon.png?v=3">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
