--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png?v=3">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png?v=3">
 <link rel="apple-touch-icon" href="/favicon.png?v=3">
+<!-- Fonts: performance-friendly -->
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+<link
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@600;700&display=swap"
+  rel="stylesheet"
+/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
